# MaxLab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  NSSM_SETUP.md  QUICK_REFERENCE.md  README.md  SCHEDULED_TASK_SETUP.md  SERVY_SETUP.md  docker-compose.yml  pyproject.toml  setup.ps1  start.ps1  validation_output.txt
.github/: PRE_COMMIT_SETUP.md  PSScriptAnalyzerSettings.psd1  copilot-instructions.md
.github/agents/: maxlab.agent.md
.github/prompts/: plan-clearNotebookOutputsPrecommit.prompt.md  plan-dockerHubBuildPush.prompt.md  plan-maxlabSetup.prompt.md  plan-startScript.prompt.md  plan-sysop.prompt.md
.github/workflows/: deploy.yml  docker.yml  lint.yml
docker/: entrypoint.sh
docker/jupyter_lab_settings/: overrides.json
docs/: COPILOT_GUIDE.md  README.md  powershell-review-summary.md  powershell-script-review.md
scripts/: common.ps1  docker-build.ps1  docker-push.ps1  docker-run.ps1  setup-conda.ps1  setup-copilot-cli.ps1  setup-env.ps1  setup-envfile.ps1  setup-kernel.ps1  setup-nbstripout.ps1  setup-nodejs.ps1  setup-nssm-service.ps1  setup-packages.ps1  setup-pip.ps1  setup-precommit.ps1  setup-scheduled-task.ps1  setup-servy-service.ps1  validate-deployment-ready.ps1  watchdog.ps1
workspace/: main.jupyterlab-workspace
workspace/notebooks/: 00-bank-insights.ipynb  01-cc-spend.ipynb  welcome.ipynb
workspace/notebooks/ai/: 01-chatgpt.ipynb  02-azureai.ipynb  03-ghcopilot.ipynb  ai-checkpoint.ipynb
workspace/notebooks/finance/: 00-bank-insights.ipynb  (+1 more)
(+7 files in other folders)
