[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxlab"
version = "0.1.0"
description = "MaxLab: AI-powered financial analysis and charting with Semantic Kernel integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Chris", email = "chris@example.com"}
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyterlab>=4.0.0",
    "python-dotenv>=1.0.0",
    "semantic-kernel>=1.39.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "nbstripout>=0.6.0",
]
openai = [
    "semantic-kernel[openai]>=1.39.0",
]

[tool.setuptools]
packages = ["maxlab"]

[tool.setuptools.package-dir]
"" = "workspace/src"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0913",  # too-many-arguments
]
